@@ -143,6 +143,7 @@ NODE node00342
 NODE node00352
 	LABEL Node352\nTwo Lines!
 	OVERLIBGRAPH in.png in2.png
+	LABELBGCOLOR 0 0 0
 	POSITION 427 118
 
 NODE node00364
@@ -395,17 +396,21 @@ LINK node00352-node00342
 LINK normal
 	ZORDER 3
 	SPLITPOS 30
-	DUPLEX half
+	
+	# DUPLEX half
 	ININFOURL in.png
 	OUTINFOURL out.png
-	NOTES poop
+	NOTES poop {link:this:inscalecolor}
 	INOVERLIBGRAPH in.png in2.png
 	OUTOVERLIBGRAPH out.png out2.png out3.png
-	BWLABEL unformatted
-	TARGET tests/mrtg.html
-	INCOMMENT Some comment here
-	OUTCOMMENT Another comment there
+	BWLABEL bits
+	# TARGET tests/mrtg.html
+	INCOMMENT Some comment here {link:this:inscalecolor}
+	OUTCOMMENT Another comment there  {link:this:outscalecolor}
 	COMMENTSTYLE center
+	COMMENTFONTCOLOR contrast
+	TARGET static:4M:24M
+	WIDTH 5
 	NODES node00342 node80111
 	BANDWIDTH 30M
 
@@ -415,11 +420,13 @@ LINK test_uni
 	INNOTES in notes
 	OUTNOTES out notes
 	COMMENTSTYLE center
+	COMMENTFONTCOLOR contrast
 	OUTCOMMENT Another comment there
 	OVERLIBGRAPH out.png out2.png out3.png
 	INBWFORMAT {link:this:inpercent:%.2f}%
 	OUTBWFORMAT {link:this:outpercent}% {link:this:bandwidth_out:%k}b
 	NODES node20108 node00342:S
+	WIDTH 5
 
 LINK test2_dual
 	BWSTYLE angled
